fix overlap on mobile in about and add image

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -12,7 +12,7 @@
     margin-bottom: 2rem;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 870px) {
     .About .Data {
         grid-template-columns: auto;
         padding-left: 1rem;
